Correct hero image url

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ body {
     color: white;
     
     /* Background styles */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(../ZAPMxXZ.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url(ZAPMxXZ.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
