--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
-    background-color: #070712;
     color: white;
     font-family: Palatino, 'Palatino Linotype',serif;
 
@@ -59,7 +59,7 @@ body {
 }
 
 .name {
-    -webkit-transition:all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
     color: inherit;
     font-family: inherit;
     font-size: 36px;
@@ -70,7 +70,7 @@ body {
 }
 
 .name:hover {
-    -webkit-transition:all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
     letter-spacing: 5px;
 }
 
@@ -79,91 +79,77 @@ body {
     border-left: 1px solid white;
     width: 1px;
     position: absolute;
-    z-index:-1;
     left: 50%;
     margin-left: -3px;
-    top: 70%;
+    top: 80%;
     animation: draw-line 4s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
+    z-index: -1;
 }
 
 hr {
   margin: auto;
   margin-top: 10px;
-  width: 400px;
-  text-align: center;
+  width: 90%;
+  bottom: 50%
 }
 
 @keyframes draw-line { 
   0% { 
-    height: 0px; 
+    height: 0px;
   }
   
   10% {
     height: 5px;
-    top: 65%;
+    top: 75%;
   }
 
   100% { 
-    height: 2300px; 
+    height: 250%;
   } 
 } 
 
-/* Writing stuff */
-.box{
-  font-family: Arial, Helvetica, sans-serif;
+@media only screen and (min-width:1200px){
+    
+    .content-box{
+      width:30vw;
+      margin: auto;
+      margin-bottom: 1%;
+    }
+    .left {right: 23%;}
+    .right {left: 23%;}
+
+}
+
+@media only screen and (max-width:1200px){
+  .content-box{
+    width: 50vw;
+    margin:auto;
+    margin-bottom: 5%;
+  }
+}
+
+.content{
+  margin: 0% 4%;
+}
+
+.content-box{
   font-size: 18px;
-  margin: auto;
   color: black;
-}
-
-.left-box {
-    background-color: #F5EBE0;
-    width: 500px;
-    border: 15px solid #064A74;
-    border-radius: 50px 15px;
-    padding: 50px;
-    margin: 20px;
-    position: relative;
-    box-shadow: 0 0 10px 2px #064A74;
-    font-family: Palatino, 'Palatino Linotype',serif;
-    padding: 25px 50px;
-}
-
-.right-box {
-    background-color: #F5EBE0;
-    width: 500px;
-    border: 15px solid #064A74;
-    border-radius: 15px 50px;
-    padding: 50px;
-    margin: 20px;
-    position: relative;
-    box-shadow: 0 0 10px 2px #064A74;
-    font-family: Palatino, 'Palatino Linotype',serif;
-    padding: 25px 50px;
+  background-color: #F5EBE0;
+  border: 15px solid #064A74;
+  border-radius: 50px 15px;
+  padding: 50px;
+  position: relative;
+  box-shadow: 0 0 10px 2px #064A74;
+  font-family: Palatino, 'Palatino Linotype',serif;
+  padding: 25px 50px;
 }
 
 .box-txt{
   margin-top: 0px;
 }
-
-/* TWEAK THESE VALUES TO SHIFT EACH RESPECTIVE BOX */
-/*32.5% center*/
-#purpose {left: 12%;}
-
-#aboutMe {left: 53%;}
-
-#experience {
-  left: 12%;
-  top: 25%;
-}
-
-#experience-txt {
-  margin-top: 0px;
-}
-
-#projects {left: 53%;}
 
 #cos-link {
   color: blue;
